[gd_scene load_steps=8 format=2]

[ext_resource path="res://addons/GDialog/Editor/CharacterEditor/PortraitEntry.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/GDialog/Editor/CharacterEditor/CharacterEditor.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="Image" id=6]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=3]
flags = 4
flags = 4
image = SubResource( 6 )
size = Vector2( 16, 16 )

[sub_resource type="Image" id=7]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=5]
flags = 4
flags = 4
image = SubResource( 7 )
size = Vector2( 16, 16 )

[node name="CharacterEditor" type="ScrollContainer"]
margin_left = 192.0
margin_right = 1253.0
margin_bottom = 661.0
custom_styles/bg = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 1056.0
margin_bottom = 656.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 500.0
margin_bottom = 651.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 9

[node name="Name" type="HBoxContainer" parent="HBoxContainer/Container"]
visible = false
margin_right = 523.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="HBoxContainer/Container/Name"]
margin_top = 5.0
margin_right = 130.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 0 )
text = "Name: "

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/Container/Name"]
visible = false
margin_left = 134.0
margin_right = 274.0
margin_bottom = 24.0
rect_min_size = Vector2( 140, 0 )

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/Container/Name"]
margin_left = 134.0
margin_right = 307.0
margin_bottom = 24.0
text = "Different display name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBox2" type="CheckBox" parent="HBoxContainer/Container/Name"]
margin_left = 311.0
margin_right = 456.0
margin_bottom = 24.0
text = "Enable Nicknames"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayName" type="HBoxContainer" parent="HBoxContainer/Container"]
visible = false
margin_top = 28.0
margin_right = 491.0
margin_bottom = 52.0
__meta__ = {
"_editor_description_": "Display name is the name that will
show up on the dialogs in game."
}

[node name="Label" type="Label" parent="HBoxContainer/Container/DisplayName"]
margin_top = 5.0
margin_right = 130.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 0 )
text = "Display Name: "

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/Container/DisplayName"]
margin_left = 134.0
margin_right = 274.0
margin_bottom = 24.0
rect_min_size = Vector2( 140, 0 )

[node name="DisplayNickname" type="HBoxContainer" parent="HBoxContainer/Container"]
visible = false
margin_top = 28.0
margin_right = 491.0
margin_bottom = 52.0
__meta__ = {
"_editor_description_": "Display name is the name that will
show up on the dialogs in game."
}

[node name="Label" type="Label" parent="HBoxContainer/Container/DisplayNickname"]
margin_top = 5.0
margin_right = 130.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 0 )
text = "Nicknames: "

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/Container/DisplayNickname"]
margin_left = 134.0
margin_right = 274.0
margin_bottom = 24.0
rect_min_size = Vector2( 140, 0 )

[node name="Color" type="HBoxContainer" parent="HBoxContainer/Container"]
margin_right = 500.0
margin_bottom = 20.0

[node name="Label" type="Label" parent="HBoxContainer/Container/Color"]
margin_top = 3.0
margin_right = 130.0
margin_bottom = 17.0
rect_min_size = Vector2( 130, 0 )
text = "Color: "

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer/Container/Color"]
margin_left = 134.0
margin_right = 274.0
margin_bottom = 20.0
rect_min_size = Vector2( 140, 0 )
color = Color( 1, 1, 1, 1 )
edit_alpha = false

[node name="Description" type="HBoxContainer" parent="HBoxContainer/Container"]
margin_top = 24.0
margin_right = 500.0
margin_bottom = 124.0

[node name="Label" type="Label" parent="HBoxContainer/Container/Description"]
margin_top = 43.0
margin_right = 130.0
margin_bottom = 57.0
rect_min_size = Vector2( 130, 0 )
text = "Description: "

[node name="TextEdit" type="TextEdit" parent="HBoxContainer/Container/Description"]
margin_left = 134.0
margin_right = 500.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3

[node name="Separator" type="Control" parent="HBoxContainer/Container"]
margin_top = 128.0
margin_right = 500.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 10 )

[node name="Portraits" type="HBoxContainer" parent="HBoxContainer/Container"]
margin_top = 142.0
margin_right = 500.0
margin_bottom = 156.0

[node name="Label" type="Label" parent="HBoxContainer/Container/Portraits"]
margin_right = 143.0
margin_bottom = 14.0
text = "Portraits / Expressions"

[node name="Labels" type="HBoxContainer" parent="HBoxContainer/Container"]
margin_top = 160.0
margin_right = 500.0
margin_bottom = 174.0

[node name="LineEdit" type="Label" parent="HBoxContainer/Container/Labels"]
margin_right = 100.0
margin_bottom = 14.0
rect_min_size = Vector2( 100, 0 )
text = "Name"

[node name="LineEdit2" type="Label" parent="HBoxContainer/Container/Labels"]
margin_left = 104.0
margin_right = 254.0
margin_bottom = 14.0
rect_min_size = Vector2( 150, 0 )
text = "Path"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Container"]
margin_top = 178.0
margin_right = 500.0
margin_bottom = 651.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Container/ScrollContainer"]
margin_right = 500.0
margin_bottom = 473.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PortraitList" type="VBoxContainer" parent="HBoxContainer/Container/ScrollContainer/VBoxContainer"]
margin_right = 500.0
margin_bottom = 24.0
size_flags_horizontal = 3

[node name="PortraitEntry" parent="HBoxContainer/Container/ScrollContainer/VBoxContainer/PortraitList" instance=ExtResource( 1 )]
margin_right = 500.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Container/ScrollContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 500.0
margin_bottom = 50.0

[node name="Button" type="Button" parent="HBoxContainer/Container/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_right = 159.0
margin_bottom = 22.0
text = "  Add new portrait(s)"
icon = SubResource( 3 )

[node name="ImportFromFolder" type="Button" parent="HBoxContainer/Container/ScrollContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 163.0
margin_right = 370.0
margin_bottom = 22.0
text = "  Import images from folder"
icon = SubResource( 5 )

[node name="FileName" type="HBoxContainer" parent="HBoxContainer/Container"]
visible = false
margin_top = 615.0
margin_right = 600.0
margin_bottom = 639.0

[node name="Label" type="Label" parent="HBoxContainer/Container/FileName"]
margin_top = 5.0
margin_right = 130.0
margin_bottom = 19.0
rect_min_size = Vector2( 130, 0 )
text = "File:"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/Container/FileName"]
margin_left = 134.0
margin_right = 600.0
margin_bottom = 24.0
rect_min_size = Vector2( 140, 0 )
size_flags_horizontal = 3
editable = false

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 504.0
margin_right = 1051.0
margin_bottom = 651.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Panel" parent="HBoxContainer/VBoxContainer"]
margin_right = 547.0
margin_bottom = 623.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/VBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/Control"]
self_modulate = Color( 1, 1, 1, 0.396078 )
margin_right = 340.0
margin_bottom = 14.0
text = "Preview"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 627.0
margin_right = 547.0
margin_bottom = 651.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 57.0
margin_bottom = 19.0
text = "Scale (%)"

[node name="Scale" type="SpinBox" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 61.0
margin_right = 135.0
margin_bottom = 24.0
value = 100.0
allow_greater = true

[node name="Label2" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 139.0
margin_top = 5.0
margin_right = 210.0
margin_bottom = 19.0
text = "        Offset"

[node name="OffsetX" type="SpinBox" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 214.0
margin_right = 314.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
allow_greater = true
allow_lesser = true

[node name="OffsetY" type="SpinBox" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 318.0
margin_right = 418.0
margin_bottom = 24.0
rect_min_size = Vector2( 100, 0 )
allow_greater = true
allow_lesser = true

[node name="MirrorOption" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 422.0
margin_right = 547.0
margin_bottom = 24.0

[node name="MirrorPortraitsCheckBox" type="CheckBox" parent="HBoxContainer/VBoxContainer/HBoxContainer/MirrorOption"]
margin_right = 125.0
margin_bottom = 24.0
text = "Mirror portraits"
